--- a/base/src/main/res/layout/m_login.xml
+++ b/base/src/main/res/layout/m_login.xml
@@ -83,12 +83,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/white"
+                        android:fontFamily="@font/roboto_medium"
                         android:hint="@string/email_address"
                         android:inputType="textEmailAddress"
                         android:paddingStart="5dp"
                         android:paddingBottom="15dp"
                         android:textSize="12sp"
-                        android:fontFamily="@font/roboto_medium"
                         bind:edittype="white"
                         tools:targetApi="lollipop" />
 
@@ -100,22 +100,22 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:textColorHint="@color/white"
-                    bind:passwordToggleEnabled="true"
                     bind:layout_constraintEnd_toEndOf="parent"
                     bind:layout_constraintStart_toStartOf="parent"
-                    bind:layout_constraintTop_toBottomOf="@+id/username_lyt">
+                    bind:layout_constraintTop_toBottomOf="@+id/username_lyt"
+                    bind:passwordToggleEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/white"
+                        android:fontFamily="@font/roboto_medium"
                         android:hint="@string/Password"
                         android:inputType="textPassword"
                         android:padding="5dp"
-                        android:textSize="12sp"
-                        android:fontFamily="@font/roboto_medium"
                         android:textColorHint="@color/white"
+                        android:textSize="12sp"
                         bind:edittype="white"
                         tools:targetApi="lollipop" />
 
