--- a/base/src/main/res/layout/m_forgotbottomsheet.xml
+++ b/base/src/main/res/layout/m_forgotbottomsheet.xml
@@ -1,70 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
-    <data>
-        <variable
-            name="handlers"
-            type="com.shopify.shopifyapp.loginsection.activity.LoginActivity.MyClickHandlers" />
-    </data>
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/round_corner_lightgray"
-        android:orientation="vertical"
-        app:behavior_hideable="true"
-        app:behavior_peekHeight="0dp"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/close_but"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/close_icon"
-            android:onClick="@{handlers::closeForgotDialog}"
             android:layout_margin="10dp"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/close_icon" />
+
         <com.shopify.shopifyapp.customviews.MageNativeEditText
             android:id="@+id/email"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_margin="20dp"
             android:background="@drawable/round_corner_gray"
-            android:textColorHint="@color/white"
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
             android:padding="5dp"
+            android:textColorHint="@color/white"
             app:edittype="normal"
-            android:layout_margin="20dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.shopify.shopifyapp.customviews.MageNativeTextView
+            android:id="@+id/forgotpassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enteremail"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/email"
-            android:id="@+id/forgotpassword"
             android:layout_marginBottom="20dp"
+            android:text="@string/enteremail"
             android:textColor="@color/white"
-            app:texttype="bold"
-            />
+            app:layout_constraintBottom_toTopOf="@id/email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:texttype="bold" />
+
         <com.shopify.shopifyapp.customviews.MageNativeButton
-            android:layout_width="150dp"
             android:id="@+id/login"
+            android:layout_width="150dp"
             android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/send"
             app:buttontype="white"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="10dp"
-            android:onClick="@{handlers::forgotPassword}"
-            app:layout_constraintTop_toBottomOf="@id/email"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/email" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
