--- a/base/src/main/res/layout/m_login_page.xml
+++ b/base/src/main/res/layout/m_login_page.xml
@@ -13,8 +13,8 @@
         <include layout="@layout/m_login"
             android:id="@+id/includedlogin"
             bind:handlers="@{handlers}"/>
-        <include layout="@layout/m_forgotbottomsheet"
-            android:id="@+id/includedforgot"
-            bind:handlers="@{handlers}"/>
+<!--        <include layout="@layout/m_forgotbottomsheet"-->
+<!--            android:id="@+id/includedforgot"-->
+<!--            bind:handlers="@{handlers}"/>-->
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
