--- a/base/src/main/res/layout/m_productview.xml
+++ b/base/src/main/res/layout/m_productview.xml
@@ -274,9 +274,10 @@
                 android:id="@+id/variant_available_qty"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="2dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="12dp"
+                android:visibility="gone"
                 bind:layout_constraintTop_toBottomOf="@+id/variant_container"
                 bind:texttype="normal" />
 
