--- a/base/src/main/res/layout/swatches_list.xml
+++ b/base/src/main/res/layout/swatches_list.xml
@@ -13,6 +13,8 @@
             android:id="@+id/variant_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
             android:text="Color"
             app:layout_constraintTop_toTopOf="parent"
             app:texttype="normal" />
