--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="main_color_gray_lt">#acacac</color>
     <color name="green">#008000</color>
     <color name="light_cream">#FFFFFADC</color>
+    <color name="red">#F90A0B</color>
 </resources>
