--- a/base/src/main/res/layout/m_splash.xml
+++ b/base/src/main/res/layout/m_splash.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/gray_color">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/splashimage"
@@ -23,16 +23,16 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="@{commonmodel.imageurl == null ? View.VISIBLE : View.GONE}"
-            bind:layout_constraintBottom_toBottomOf="parent"
-            bind:layout_constraintEnd_toEndOf="parent"
-            android:adjustViewBounds="true"
-            bind:layout_constraintStart_toStartOf="parent"
-            bind:layout_constraintTop_toTopOf="parent"
-            bind:srcCompat="@drawable/splash_bg" />
+<!--        <androidx.appcompat.widget.AppCompatImageView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:visibility="@{commonmodel.imageurl == null ? View.VISIBLE : View.GONE}"-->
+<!--            bind:layout_constraintBottom_toBottomOf="parent"-->
+<!--            bind:layout_constraintEnd_toEndOf="parent"-->
+<!--            android:adjustViewBounds="true"-->
+<!--            bind:layout_constraintStart_toStartOf="parent"-->
+<!--            bind:layout_constraintTop_toTopOf="parent"-->
+<!--            bind:srcCompat="@drawable/splash_bg" />-->
 
 
         <ProgressBar
