--- a/base/src/main/res/layout/product_list_item.xml
+++ b/base/src/main/res/layout/product_list_item.xml
@@ -28,36 +28,46 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:background="@color/white">
+        android:background="@color/white"
+        bind:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/image"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_gravity="left"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="18dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/image"
-            android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}"
-            android:translationZ="10dp"
-            bind:layout_constraintDimensionRatio="H,0.8:1.1" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:translationZ="10dp">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="18dp"
+                bind:layout_constraintTop_toTopOf="parent"
+                bind:layout_constraintStart_toStartOf="parent"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/image"
+                android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}"
+
+                bind:layout_constraintDimensionRatio="H,0.8:1.1" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/out_of_stock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:translationZ="10dp"
-            android:background="@color/red"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            android:fontFamily="@font/roboto_bold"
-            android:padding="5dp"
-            android:textAllCaps="true"
-            android:text="@string/out_of_stock"
             android:layout_marginStart="7dp"
             android:layout_marginBottom="10dp"
+            android:background="@color/red"
+            android:fontFamily="@font/roboto_bold"
+            android:padding="5dp"
+            android:text="@string/out_of_stock"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:translationZ="10dp"
             android:visibility="gone"
 
             />
@@ -215,5 +225,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </FrameLayout>
+
 
 </layout>
