--- a/base/src/main/res/layout/m_cartlist.xml
+++ b/base/src/main/res/layout/m_cartlist.xml
@@ -314,7 +314,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@color/white"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/proceed"
@@ -334,6 +334,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:visibility="visible"
+                    android:onClick="@{view->handler.payWithGpay(view,bottomdata)}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
