--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="AppTheme" parent="MyMaterialTheme.Base">
         <!-- color of the menu navigation icon -->
@@ -30,6 +30,7 @@
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <!-- color of the menu overflow icon -->
         <item name="android:textColorSecondary">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
     <style name="PauseDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowTitleStyle">@style/PauseDialogTitle</item>
