--- a/base/src/main/res/layout/m_cartlist.xml
+++ b/base/src/main/res/layout/m_cartlist.xml
@@ -12,6 +12,7 @@
         <variable
             name="handler"
             type="com.shopify.shopifyapp.cartsection.activities.CartList.ClickHandler" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -68,11 +69,181 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:layoutAnimation="@anim/layout_animation"
-                    app:layout_constraintBottom_toTopOf="@+id/giftcard_section"
+                    app:layout_constraintBottom_toTopOf="@+id/zepiet_section"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/clearcart_section"
                     bind:layout_behavior="@string/appbar_scrolling_view_behavior"
-                    bind:listitem="@layout/m_cartitem"></androidx.recyclerview.widget.RecyclerView>
+                    bind:listitem="@layout/m_cartitem"/>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/zepiet_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:visibility="visible"
+                    app:layout_constraintTop_toBottomOf="@+id/cartlist">
+
+
+
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/local_container"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_80sdp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="@dimen/_5sdp"
+                        android:background="@drawable/black_border"
+                        android:onClick="@{(view)->handler.localDeliveryClick(view)}"
+                        app:layout_constraintEnd_toStartOf="@+id/store_container"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/local_icon"
+                            android:layout_width="@dimen/_28sdp"
+                            android:layout_height="@dimen/_28sdp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/local_icon" />
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/local_txt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:fontFamily="@font/roboto_medium"
+                            android:text="@string/local_delivery"
+                            android:textAlignment="center"
+                            android:textSize="@dimen/_10ssp"
+                            app:layout_constraintTop_toBottomOf="@+id/local_icon" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/store_container"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_80sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/black_border"
+                        android:onClick="@{(view)->handler.storeDeliveryClick(view)}"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/local_container"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/store_icon"
+                            android:layout_width="@dimen/_25sdp"
+                            android:layout_height="@dimen/_25sdp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/store_icon" />
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/store_txt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:fontFamily="@font/roboto_medium"
+                            android:text="@string/pick_up_in_store"
+                            android:textAlignment="center"
+                            android:textSize="@dimen/_10ssp"
+                            app:layout_constraintTop_toBottomOf="@+id/store_icon" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/delivery_option"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:visibility="visible"
+                        app:layout_constraintTop_toBottomOf="@+id/local_container">
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/deliver_area_txt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/roboto_bold"
+                         android:visibility="gone"
+                            android:text="@string/please_enter_your_postal_code_to_find_out_if_we_deliver_to_this_area"
+                            android:textSize="@dimen/_12ssp"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/delivery_date_txt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:background="@drawable/round_corner_lightgray"
+                            android:fontFamily="@font/roboto_medium"
+                            android:gravity="center"
+                            android:onClick="@{(view)->handler.deliveryDatePicker()}"
+                            android:padding="@dimen/_8sdp"
+                            android:text="@string/click_here_to_select_delivery_date"
+                            android:textSize="@dimen/_12ssp"
+                            android:visibility="gone"
+                            app:layout_constraintTop_toBottomOf="@+id/deliver_area_txt" />
+
+                        <androidx.appcompat.widget.AppCompatSpinner
+                            android:id="@+id/delivery_time_spn"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_35sdp"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:background="@drawable/round_corner_lightgray"
+                            android:fontFamily="@font/roboto_bold"
+                            android:gravity="center"
+                            android:textSize="@dimen/_12ssp"
+                            android:visibility="gone"
+                            app:layout_constraintTop_toBottomOf="@+id/delivery_date_txt" />
+                        <androidx.appcompat.widget.AppCompatEditText
+                            android:id="@+id/order_note_edt"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:layout_marginTop="7dp"
+                            android:background="@drawable/round_corner_lightgray"
+                            android:fontFamily="@font/roboto_light"
+                            android:hint="@string/order_note_hint"
+                            android:padding="10dp"
+                            android:textSize="12sp"
+                            android:visibility="gone"
+                            app:layout_constraintTop_toBottomOf="@+id/delivery_time_spn" />
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/map_container"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"
+                            app:layout_constraintTop_toBottomOf="@+id/delivery_time_spn">
+
+                            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                                xmlns:tools="http://schemas.android.com/tools"
+                                android:id="@+id/store_map"
+                                android:name="com.google.android.gms.maps.SupportMapFragment"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_200sdp"
+                                android:layout_marginTop="@dimen/_8sdp"
+                                app:layout_constraintTop_toTopOf="parent"
+                                tools:context="com.shopify.shopifyapp.cartsection.activities.CartList" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/location_list"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:visibility="gone"
+                            app:layout_constraintTop_toBottomOf="@+id/map_container" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/giftcard_section"
@@ -81,7 +252,7 @@
                     android:layout_margin="5dp"
                     android:background="@color/light_cream"
                     android:padding="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cartlist">
+                    app:layout_constraintTop_toBottomOf="@+id/zepiet_section">
 
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/giftcard_edt"
